full functionality but one extra tab is generaated

--- a/gaurdedText/Views/Home/createtabs.cshtml
+++ b/gaurdedText/Views/Home/createtabs.cshtml
@@ -66,11 +66,52 @@
    <script>
        $('document').ready(function ()
        {
-           let fetchtext = sessionStorage.getItem("sitedata"); 
-           var res = fetchtext.slice(128, -1);
-           var a = document.getElementsByClassName("actual-textarea")[0].innerHTML = res;         
-           //console.log(a);
+          // let charlength = localStorage.getItem("charcount");
+          // let tablength = localStorage.getItem("tabnumber");
+          //// let tablen = Number(tablength) - 1;
+          // console.log(tablength);
+          // console.log(charlength);
+          // var i;
+          // for (i = 0; i <= tablength; i++)
+          // {
+          //     let generatetabs = creatingTabs();
+          //     //let makeactive = active2();
+              
+          //     if (i == 0)
+          //     {
+          //         let fetchtext = sessionStorage.getItem("sitedata");
+          //         //let generatetabs = creatingTabs();
+          //         //let makeactive = active2();
+          //         let val1 = charlength.split(',')[i];
+          //         let value1 = Number(val1);
 
+          //         let res = fetchtext.substring(128, value1);
+          //         var a = document.getElementsByClassName("actual-textarea")[i].innerHTML = res;
+          //         console.log(a);
+          //     }
+          //     else
+          //     {
+          //         let fetchtext = sessionStorage.getItem("sitedata");
+          //         //let generatetabs = creatingTabs();
+          //         //let makeactive = active2();
+          //         let val2 = charlength.split(',')[i];
+          //         let value2 = Number(val2);
+                 
+          //         let countingchar = value2 + 128;
+          //         let b1 = countingchar.value;
+          //         console.log(b1);
+          //         let res = fetchtext.substring(countingchar, value2);
+          //         var b = document.getElementsByClassName("actual-textarea")[i].innerHTML = res;
+          //         console.log(b);
+          //     }
+          // }
+
+
+           //////////y.split(',').map(x=>parseInt(x))/////////previous code///////////////////
+           //let fetchtext = sessionStorage.getItem("sitedata"); 
+           //var res = fetchtext.slice(128, -1);
+           //var a = document.getElementsByClassName("actual-textarea")[0].innerHTML = res;    
+        
        });
    </script>
                    
