--- a/gaurdedText/Views/Home/enterpassword.cshtml
+++ b/gaurdedText/Views/Home/enterpassword.cshtml
@@ -21,28 +21,35 @@
         <title>Document</title>
 </head >
 
-            <body>
-                <div class="container-fluid maindiv">
+<body>
+    <div class="container-fluid maindiv">
 
-                    <section id="createsite">
-                        <div class="row text-center">
-                            <div class="col text-center" id="createsitediv3">
+        <section id="createsite">
+            <div class="row text-center">
+                <div class="col text-center" id="createsitediv3">
 
-                                <h2><b>Site already taken..</b></h2>
-                                <h5>Enter your password to decrypt your site..</h5>
-                                <input class="border rounded shadow-sm password-field" type="password" id="password_field" placeholder="password..." autofocus="">
-                                    <br>
-                                        <br>
-                                            <br>
-                                                <div>
-                                                    <button id="decrypt_btn" class="btn btn-primary btn-createsite" type="button" onclick="enterpassword()">decrypt</button>
-                                                </div>
+                    <h2><b>Site already taken..</b></h2>
+                    <h5>Enter your password to decrypt your site..</h5>
+                    <input class="border rounded shadow-sm password-field" type="password" id="password_field" placeholder="password..." autofocus="">
+                    <br>
+                    <br>
+                    <br>
+                    <div>
+                        <button id="decrypt_btn" class="btn btn-primary btn-createsite" type="button" onclick="enterpassword()">decrypt</button>
                     </div>
-
                 </div>
-            </section>
+                <input type="hidden" id="hidden_field" name="scenario_decider" value="false">
+            </div>
 
-        </div>
+        </section>
+
+    </div>
+    <script>
+     let val = document.getElementById("hidden_field").value;
+      //console.log(val);
+     let scenario_ses = sessionStorage.setItem("create_site_val2", val);
+    //console.log(scenario_ses);
+    </script>
 </body>
 
 </html>
