--- a/gaurdedText/Views/Home/Index.cshtml
+++ b/gaurdedText/Views/Home/Index.cshtml
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Content/myassests/main.css">
+    @*<link href="~/Content/loading.css" rel="stylesheet" />*@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../Content/images/icons8-lock-16.png" type="text/css" rel="icon">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous" ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous" defer></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous" defer></script>
@@ -33,31 +34,41 @@
                 </ul>
         </div>
     </nav>
-    <div class="container-fluid maindiv">
-        <div class="strong">
-            <strong>Protect your texts by clicking on the start!</strong>
-            <h3>Create your site and store your texts/notes, then guard them with a password.</h3>
-        </div>
-        <div class="row securetxt-page-creator">
-            <div class="col">
-                <h2 class="secure-text-site">
-                    securetext.in/ <input id="create_site_txtbox" type="text" class="bg-white border rounded border-dark shadow-sm" placeholder="write..." onblur="onBlurEvent(this)">
-                </h2>
-                <button class="btn btn-primary go-btn" type="button" onclick="opensite()" >start!</button>
-                <div id="displayerror"></div>  @*@ViewBag.urfl;*@
-            </div>
+    
+        <div class="container-fluid maindiv">
+            
+                <div class="strong">
+                    <strong>Protect your texts by clicking on the start!</strong>
+                    <h3>Create your site and store your texts/notes, then guard them with a password.</h3>
+                </div>
+                <div class="row securetxt-page-creator">
+                    <div class="col"> 
 
-        </div><br />
-        <div>
-            <ul id="homepage-first-list">
-                <li> The safest way on the internet for storing your text! </li>
-                <li> Type any URL like protectedText.comanything<br> If you find it - it's yours! </li>
-                <li> All your text is encrypted, you can access it anywhere. </li>
-                <!-- <li> Simple. Fast. Free. No ads. Secure - don't trust us, <span>check the code</span> yourself. </li> -->
-            </ul>
-        </div>
+                        <h2 class="secure-text-site">
+                            securetext.in/ <input id="create_site_txtbox" type="text" class="bg-white border rounded border-dark shadow-sm" placeholder="write..." onblur="onBlurEvent(this)">
+                        </h2>
 
+                        <button class="btn btn-primary go-btn" type="button" onclick="opensite()">start!</button>
+                        <div id="displayerror"></div>  @*@ViewBag.urfl;*@
+
+                    </div>
+
+                </div><br />
+                <div>
+                    <ul id="homepage-first-list">
+                        <li> The safest way on the internet for storing your text! </li>
+                        <li> Type any URL like protectedText.comanything<br> If you find it - it's yours! </li>
+                        <li> All your text is encrypted, you can access it anywhere. </li>
+                        <!-- <li> Simple. Fast. Free. No ads. Secure - don't trust us, <span>check the code</span> yourself. </li> -->
+                    </ul>
+                </div>  
     </div>
+    <script>
+       
+       
+
+
+    </script>
 </body>
 
 </html>
