each and every button is in working state except url and empty cipher

--- a/gaurdedText/Views/Home/createtabs.cshtml
+++ b/gaurdedText/Views/Home/createtabs.cshtml
@@ -7,21 +7,29 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="~/Content/myassests/decorating.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/myassests/decorating.css" />
+    <link rel="stylesheet"  href="~/Content/myassests/changepassmodal.css" />
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
     <script src="~/Scripts/myassests/onblu.js" defer></script>
     @*<script src="~/Scripts/myassests/aes.js" defer></script>*@
     <script src="~/Scripts/myassests/sha512.js" defer></script>
     <script src="~/Scripts/myassests/controls.js"></script>
     <script src="~/Scripts/myassests/createtabs.js"></script>
+    <script src="~/Scripts/myassests/buttons.js"></script>
+    <link href="~/Content/myassests/changepassmodal.css" rel="stylesheet" />
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <i class="material-icons" style="color: #fff;">lock</i>
         <a class="navbar-brand" href="#">GuardedText</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,17 +46,26 @@
 
     <div id="content"></div>
     <div class="container my-5">
-        @*@Html.Raw(TempData["insert message"])*@
 
         <div>
             <button type="button" id="savebtn" class="btn btn-success" onclick="savebtn()">Save</button>
-            <button type="button" class="btn btn-danger">Danger</button>
-            <button type="button" class="btn btn-warning">Warning</button>
+            <button type="button" class="btn btn-danger" id ="del_site" onclick="delete_site()">Delete site</button>
+            <button type="button" class="btn btn-warning"id="change_password" onclick="change_pass()">Change Password</button>
+            @*<button type="button" class="btn btn-primary" id="change_password" onclick="change_pass()">
+                Change Password
+            </button>*@
+           
         </div>
         <br>
-        <div>
-            <button type="button" class="btn btn-primary" onclick="creatingTabs()">+ Create Tab</button>
-            <!-- <button type="button " class="my-5" >Click Me!</button> -->
+        <div class="row options-pane">
+            <div class="col-6 " id="createbtn" style="margin:0px">
+                <button type="button" class="btn btn-primary" onclick="creatingTabs()">+ Create Tab</button>
+            </div>
+
+            <div class="col-3 text-right " id="clear" style="margin:0px">
+                <i onclick="closeTab()" class="material-icons" id="closetab-btn" title="close tab." style="color: rgb(249,6,6);font-size: 23px;">clear</i>
+            </div>
+
         </div>
         <br>
         <div class="row text-area">
@@ -64,76 +81,42 @@
         </div>
 
     </div>
-   <script>
 
-       let scenario_select = sessionStorage.getItem("create_site_val2");
-       
-       if (scenario_select == "true")
-       {
-          let abc = creatingTabs();
-       }
-       else
-       {
-          let abcd = loadlayout();
-       }
-       //$('document').ready(function ()
-       //{
-       //    let charlength = localStorage.getItem("charcount");
-       //    let tablength = localStorage.getItem("tabnumber");
-       //   // let tablen = Number(tablength) - 1;
-       //    console.log(tablength);
-       //    console.log(charlength);
-       //    var i;
-       //    for (i = 0; i <= tablength; i++)
-       //    {
-       //        let generatetabs = creatingTabs();
-       //        //let makeactive = active2();
-              
-       //        if (i == 0)
-       //        {
-       //            let fetchtext = sessionStorage.getItem("sitedata");
-       //            //let generatetabs = creatingTabs();
-       //            //let makeactive = active2();
-       //            let val1 = charlength.split(',')[i];
-       //            let value1 = Number(val1);
+    <!-- Modal content -->
+    <div id="myModal" class="modal">
 
-       //            let res = fetchtext.substring(128, value1);
-       //            var a = document.getElementsByClassName("actual-textarea")[i].innerHTML = res;
-       //            console.log(a);
-       //        }
-       //        else
-       //        {
-       //            let fetchtext = sessionStorage.getItem("sitedata");
-       //            //let generatetabs = creatingTabs();
-       //            //let makeactive = active2();
-       //            let val2 = charlength.split(',')[i];
-       //            let value2 = Number(val2);
-                 
-       //            let countingchar = value2 + 128;
-       //            let b1 = countingchar.value;
-       //            console.log(b1);
-       //            let res = fetchtext.substring(countingchar, value2);
-       //            var b = document.getElementsByClassName("actual-textarea")[i].innerHTML = res;
-       //            console.log(b);
-       //        }
-       //    }
+        <!-- Modal content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="close">&times;</span>
+                <h2 style="color:black;">Change Password</h2>
+            </div>
+            <div class="modal-body">
+                <label>Password:</label><input type="password" class="form-control" id="inputPassword1" placeholder="Password">
+                <label>Re-Password:</label><input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+            </div>
+            <div class="modal-footer">
+                
+                <label id="new_password"></label>
+                <button type="button" class="btn btn-primary btn-sm" onclick="save_new_pass()">Save</button>
+            </div>
+        </div>
 
+    </div>
 
-       //    ////////y.split(',').map(x=>parseInt(x))/////////previous code///////////////////
-       //    let fetchtext = sessionStorage.getItem("sitedata"); 
-       //    var res = fetchtext.slice(128, -1);
-       //    var a = document.getElementsByClassName("actual-textarea")[0].innerHTML = res;    
-       //});
-           //loadlayout();
+    <script>
 
-       //let p = window.location.href;
-       //console.log("window.location.href" + p);
-       //let pre = p.substring(p.lastIndexOf('?') + 3, p.length);
-       //console.log(p);
+        let scenario_select = sessionStorage.getItem("create_site_val2");
 
-       
-   </script>
-                   
+        if (scenario_select == "true") {
+            let abc = creatingTabs();
+        }
+        else {
+            let abcd = loadlayout();
+        }
+
+    </script>
+
 </body>
 
 </html >
