--- a/gaurdedText/Content/myassests/decorating.css
+++ b/gaurdedText/Content/myassests/decorating.css
@@ -41,7 +41,7 @@ height: 600px;
 .tab button.active {
     background-color: #DDD;
     color: black;
-    font-size: 500 25px Lato, sans-serif;
+    font-size: 500px, 25px, Lato, sans-serif;
 }
 
 .tabcontent {
@@ -84,4 +84,18 @@ section:after {
 .col-8 {
     padding-right: 0px;
     padding-left: 0px;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+#clear {
+    margin-right: 0px;
+    padding-right: 0px;
+}
+
+#createbtn {
+    margin-right: 0px;
+    padding-right: 0px;
 }
